package com.example.popin;

public enum EventCategory{
    CONCERT,
    SPORTS,
    THEATER,
    COMEDY,
    FESTIVAL,
    MUSIC
}
